# employee_directory

./: .gitignore  README copy.md  README.md  alembic.ini  drop_all_tables.py  pyproject.toml  pytest.ini  requirements.txt  setup.py  test.db
alembic/: env.py
alembic/versions/: 6bde876c05e8_make_updated_at_non_optional.py  8c870db51b89_initial_migration.py  910beb2be1cb_initial_migration.py  ab4bcaea65e8_updated_order_table.py  e2b00a2ae118_recreate_table.py  f99c726b982a_make_updated_at_non_optional.py  fce9651cb022_recreate_order_table.py
src/: main.py
src/api/routes/: employee_routes.py  order_routes.py
src/core/: exceptions.py
src/core/models/: employee.py  order.py
src/core/schemas/: employee_schema.py  order_schema.py
src/database/: connection.py
src/services/: employee_service.py  order_service.py
tests/: conftest.py  test_employee_routes.py  test_order_routes.py
